documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef int BOOL;
typedef void* HCARD;

C11W32API VOID __stdcall C11_FillMem(USHORT Data,USHORT WordOffset,INT iWordCount,HCARD handleval);

C11W32API USHORT __stdcall C11_GetBCAST(HCARD handleval);

C11W32API USHORT __stdcall C11_GetBUF(HCARD handleval);

C11W32API USHORT __stdcall C11_GetCHAN(HCARD handleval);

C11W32API USHORT __stdcall C11_GetCIRCLE(HCARD handleval);

C11W32API USHORT __stdcall C11_GetDYNBC(HCARD handleval);

C11W32API USHORT __stdcall C11_GetEXT(HCARD handleval);

C11W32API USHORT __stdcall C11_GetHigh(ULONG val);

C11W32API USHORT __stdcall C11_GetILLEGAL(INT subaddr,BOOL trbit,BOOL mcflag,BOOL bcastflag,HCARD handleval);

C11W32API USHORT __stdcall C11_GetINT(HCARD handleval);

C11W32API USHORT __stdcall C11_GetIntLog(HCARD handleval);

C11W32API USHORT __stdcall C11_GetINTMASK(HCARD handleval);

C11W32API USHORT __stdcall C11_GetLow(ULONG val);

C11W32API USHORT __stdcall C11_GetMODE(HCARD handleval);

C11W32API USHORT __stdcall C11_GetMonCtrl(HCARD handleval);

C11W32API VOID __stdcall C11_GetMonFilt(LPUSHORT valuel,LPUSHORT valueh,HCARD handleval);

C11W32API USHORT __stdcall C11_GetPP(HCARD handleval);

C11W32API USHORT __stdcall C11_GetRTADDR(HCARD handleval);

C11W32API USHORT __stdcall C11_GetStatus(HCARD handleval);

C11W32API USHORT __stdcall C11_GetSTD(HCARD handleval);

C11W32API USHORT __stdcall C11_GetTIMEOUT(HCARD handleval);

C11W32API USHORT __stdcall C11_GetXMTSW(HCARD handleval);

C11W32API USHORT __stdcall C11_HeapAlloc(USHORT wordcount,HCARD handleval);

C11W32API USHORT __stdcall C11_HeapAvail(HCARD handleval);

C11W32API VOID __stdcall C11_HeapClear(HCARD handleval);

C11W32API USHORT __stdcall C11_HeapRdHead(HCARD handleval);

C11W32API VOID __stdcall C11_HeapWrHead(USHORT value,HCARD handleval);

C11W32API INT __stdcall C11_INTDisable(HCARD handleval);

C11W32API INT __stdcall C11_INTEnable(HCARD handleval);

C11W32API USHORT __stdcall C11_INTRdPend(HCARD handleval);

C11W32API INT __stdcall C11_INTRdPoll(HCARD handleval);

C11W32API VOID __stdcall C11_INTReset(HCARD handleval);

C11W32API USHORT __stdcall C11_IsBC(HCARD handleval);

C11W32API USHORT __stdcall C11_IsMON(HCARD handleval);

C11W32API USHORT __stdcall C11_IsRT(HCARD handleval);

C11W32API USHORT __stdcall C11_IsRTMON(HCARD handleval);

C11W32API ULONG __stdcall C11_MakeLong(USHORT valh,USHORT vall);

C11W32API ULONG __stdcall C11_Mask(ULONG dataval,USHORT cntval);

C11W32API ULONG __stdcall C11_Mod(ULONG moda,ULONG modb);

C11W32API VOID __stdcall C11_MONAll(HCARD handleval);

C11W32API USHORT __stdcall C11_MONBlockBase(HCARD handleval);

C11W32API USHORT __stdcall C11_MONDataBase(HCARD handleval);

C11W32API VOID __stdcall C11_MONNone(HCARD handleval);

C11W32API ULONG __stdcall C11_Mul(ULONG mula,ULONG mulb);

C11W32API BOOL __stdcall C11_OkayHandle(HCARD handleval);

C11W32API HCARD __stdcall C11_OpenDevice(LPVOID device_id);

C11W32API USHORT __stdcall C11_PackRTCWD(INT subaddr,BOOL trbit,BOOL mcflag,BOOL bcastflag,INT count);

C11W32API BYTE __stdcall C11_PeekAttr(USHORT WordOffset,HCARD handleval);

C11W32API VOID __stdcall C11_PeekStrAttr(LPUSHORT pwBuffer,USHORT WordOffset,INT iWordCount,HCARD handleval);

C11W32API VOID __stdcall C11_PeekStrMem(LPUSHORT pwBuffer,USHORT WordOffset,INT iWordCount,HCARD handleval);

C11W32API VOID __stdcall C11_PokeAttr(BYTE Data,USHORT WordOffset,HCARD handleval);

C11W32API VOID __stdcall C11_PokeStrAttr(LPUSHORT pwBuffer,USHORT WordOffset,INT iWordCount,HCARD handleval);

C11W32API VOID __stdcall C11_PokeStrMem(LPUSHORT pwBuffer,USHORT WordOffset,INT iWordCount,HCARD handleval);

C11W32API USHORT __stdcall C11_RTAddrData(USHORT type,USHORT cwd,HCARD handleval);

C11W32API USHORT __stdcall C11_RTAddrDesc(USHORT type,USHORT cwd,HCARD handleval);

C11W32API BOOL __stdcall C11_RTAddrParity(INT rtaddr);

C11W32API VOID __stdcall C11_RTInitData(USHORT scheme,HCARD handleval);

C11W32API USHORT __stdcall C11_RTPokeData(USHORT cwd,LPUSHORT data,HCARD handleval);

C11W32API USHORT __stdcall C11_RTRdDesc(USHORT cwd,LPUSHORT desc,HCARD handleval);

C11W32API USHORT __stdcall C11_RTWrDesc(USHORT cwd,LPUSHORT desc,HCARD handleval);

C11W32API VOID __stdcall C11_SetAllILLEGAL(HCARD handleval);

C11W32API VOID __stdcall C11_SetBCAST(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetBUF(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetCHAN(USHORT chanval,HCARD handleval);

C11W32API VOID __stdcall C11_SetCIRCLE(USHORT circleval,HCARD handleval);

C11W32API VOID __stdcall C11_SetDYNBC(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetEXT(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetILLEGAL(INT subaddr,BOOL trbit,BOOL mcflag,BOOL bcastflag,HCARD handleval);

C11W32API VOID __stdcall C11_SetINT(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetIntLog(USHORT addressval,HCARD handleval);

C11W32API VOID __stdcall C11_SetINTMASK(USHORT maskval,HCARD handleval);

C11W32API INT __stdcall C11_SetLog(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetMODE(USHORT modeval,HCARD handleval);

C11W32API VOID __stdcall C11_SetMonCtrl(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetMonFilt(USHORT valuel,USHORT valueh,HCARD handleval);

C11W32API VOID __stdcall C11_SetPP(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetRTADDR(USHORT rtaddr,HCARD handleval);

C11W32API VOID __stdcall C11_SetStatus(USHORT flags,USHORT immclear,HCARD handleval);

C11W32API VOID __stdcall C11_SetSTD(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetTIMEOUT(USHORT enableval,HCARD handleval);

C11W32API VOID __stdcall C11_SetXMTSW(USHORT enableval,HCARD handleval);

C11W32API ULONG __stdcall C11_Shl(ULONG dataval,USHORT cntval);

C11W32API ULONG __stdcall C11_Shr(ULONG dataval,USHORT cntval);

C11W32API USHORT __stdcall C11_StatRead(HCARD handleval);

C11W32API USHORT __stdcall C11_TTRead(HCARD handleval);

C11W32API VOID __stdcall C11_TTSet(USHORT timetagval,HCARD handleval);

C11W32API VOID __stdcall C11_TTZero(HCARD handleval);