documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32NET.VB

    Public Declare Sub C11_FillMem Lib "C11W32.DLL" Alias "_C11_FillMem@16" (ByVal data As UInt16, ByVal wordoffset As UInt16, ByVal iwordcount As Int32, ByVal handleval As UInt32)
    Public Declare Function C11_GetBCAST Lib "C11W32.DLL" Alias "_C11_GetBCAST@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetBUF Lib "C11W32.DLL" Alias "_C11_GetBUF@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetCHAN Lib "C11W32.DLL" Alias "_C11_GetCHAN@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetCIRCLE Lib "C11W32.DLL" Alias "_C11_GetCIRCLE@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetDYNBC Lib "C11W32.DLL" Alias "_C11_GetDYNBC@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetEXT Lib "C11W32.DLL" Alias "_C11_GetEXT@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetHigh Lib "C11W32.DLL" Alias "_C11_GetHigh@4" (ByVal val As UInt32) As UInt16
    Public Declare Function C11_GetILLEGAL Lib "C11W32.DLL" Alias "_C11_GetILLEGAL@20" (ByVal subaddr As Int32, ByVal trbit As Int32, ByVal mcflag As Int32, ByVal bcastflag As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetINT Lib "C11W32.DLL" Alias "_C11_GetINT@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetIntLog Lib "C11W32.DLL" Alias "_C11_GetIntLog@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetINTMASK Lib "C11W32.DLL" Alias "_C11_GetINTMASK@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetLow Lib "C11W32.DLL" Alias "_C11_GetLow@4" (ByVal val As UInt32) As UInt16
    Public Declare Function C11_GetMODE Lib "C11W32.DLL" Alias "_C11_GetMODE@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetMonCtrl Lib "C11W32.DLL" Alias "_C11_GetMonCtrl@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C11_GetMonFilt Lib "C11W32.DLL" Alias "_C11_GetMonFilt@12" (ByRef valuel As UInt16, ByRef valueh As UInt16, ByVal handleval As UInt32)
    Public Declare Function C11_GetPP Lib "C11W32.DLL" Alias "_C11_GetPP@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetRTADDR Lib "C11W32.DLL" Alias "_C11_GetRTADDR@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetStatus Lib "C11W32.DLL" Alias "_C11_GetStatus@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetSTD Lib "C11W32.DLL" Alias "_C11_GetSTD@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetTIMEOUT Lib "C11W32.DLL" Alias "_C11_GetTIMEOUT@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_GetXMTSW Lib "C11W32.DLL" Alias "_C11_GetXMTSW@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_HeapAlloc Lib "C11W32.DLL" Alias "_C11_HeapAlloc@8" (ByVal wordcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_HeapAvail Lib "C11W32.DLL" Alias "_C11_HeapAvail@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C11_HeapClear Lib "C11W32.DLL" Alias "_C11_HeapClear@4" (ByVal handleval As UInt32)
    Public Declare Function C11_HeapRdHead Lib "C11W32.DLL" Alias "_C11_HeapRdHead@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C11_HeapWrHead Lib "C11W32.DLL" Alias "_C11_HeapWrHead@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Function C11_INTDisable Lib "C11W32.DLL" Alias "_C11_INTDisable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C11_INTEnable Lib "C11W32.DLL" Alias "_C11_INTEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C11_INTRdPend Lib "C11W32.DLL" Alias "_C11_INTRdPend@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_INTRdPoll Lib "C11W32.DLL" Alias "_C11_INTRdPoll@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub C11_INTReset Lib "C11W32.DLL" Alias "_C11_INTReset@4" (ByVal handleval As UInt32)
    Public Declare Function C11_IsBC Lib "C11W32.DLL" Alias "_C11_IsBC@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_IsMON Lib "C11W32.DLL" Alias "_C11_IsMON@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_IsRT Lib "C11W32.DLL" Alias "_C11_IsRT@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_IsRTMON Lib "C11W32.DLL" Alias "_C11_IsRTMON@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_MakeLong Lib "C11W32.DLL" Alias "_C11_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function C11_Mask Lib "C11W32.DLL" Alias "_C11_Mask@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function C11_Mod Lib "C11W32.DLL" Alias "_C11_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
    Public Declare Sub C11_MONAll Lib "C11W32.DLL" Alias "_C11_MONAll@4" (ByVal handleval As UInt32)
    Public Declare Function C11_MONBlockBase Lib "C11W32.DLL" Alias "_C11_MONBlockBase@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_MONDataBase Lib "C11W32.DLL" Alias "_C11_MONDataBase@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C11_MONNone Lib "C11W32.DLL" Alias "_C11_MONNone@4" (ByVal handleval As UInt32)
    Public Declare Function C11_Mul Lib "C11W32.DLL" Alias "_C11_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Function C11_OkayHandle Lib "C11W32.DLL" Alias "_C11_OkayHandle@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C11_OpenDevice Lib "C11W32.DLL" Alias "_C11_OpenDevice@4" (ByVal device_id As IntPtr) As UInt32
    Public Declare Function C11_PackRTCWD Lib "C11W32.DLL" Alias "_C11_PackRTCWD@20" (ByVal subaddr As Int32, ByVal trbit As Int32, ByVal mcflag As Int32, ByVal bcastflag As Int32, ByVal count As Int32) As UInt16
    Public Declare Function C11_PeekAttr Lib "C11W32.DLL" Alias "_C11_PeekAttr@8" (ByVal wordoffset As UInt16, ByVal handleval As UInt32) As Byte
    Public Declare Sub C11_PeekStrAttr Lib "C11W32.DLL" Alias "_C11_PeekStrAttr@16" (ByRef pwbuffer As UInt16, ByVal wordoffset As UInt16, ByVal iwordcount As Int32, ByVal handleval As UInt32)
    Public Declare Sub C11_PeekStrMem Lib "C11W32.DLL" Alias "_C11_PeekStrMem@16" (ByRef pwbuffer As UInt16, ByVal wordoffset As UInt16, ByVal iwordcount As Int32, ByVal handleval As UInt32)
    Public Declare Sub C11_PokeAttr Lib "C11W32.DLL" Alias "_C11_PokeAttr@12" (ByVal data As Byte, ByVal wordoffset As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_PokeStrAttr Lib "C11W32.DLL" Alias "_C11_PokeStrAttr@16" (ByRef pwbuffer As UInt16, ByVal wordoffset As UInt16, ByVal iwordcount As Int32, ByVal handleval As UInt32)
    Public Declare Sub C11_PokeStrMem Lib "C11W32.DLL" Alias "_C11_PokeStrMem@16" (ByRef pwbuffer As UInt16, ByVal wordoffset As UInt16, ByVal iwordcount As Int32, ByVal handleval As UInt32)
    Public Declare Function C11_RTAddrData Lib "C11W32.DLL" Alias "_C11_RTAddrData@12" (ByVal typeval As UInt16, ByVal cwd As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_RTAddrDesc Lib "C11W32.DLL" Alias "_C11_RTAddrDesc@12" (ByVal typeval As UInt16, ByVal cwd As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_RTAddrParity Lib "C11W32.DLL" Alias "_C11_RTAddrParity@4" (ByVal rtaddr As Int32) As Int32
    Public Declare Sub C11_RTInitData Lib "C11W32.DLL" Alias "_C11_RTInitData@8" (ByVal scheme As UInt16, ByVal handleval As UInt32)
    Public Declare Function C11_RTPokeData Lib "C11W32.DLL" Alias "_C11_RTPokeData@12" (ByVal cwd As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_RTRdDesc Lib "C11W32.DLL" Alias "_C11_RTRdDesc@12" (ByVal cwd As UInt16, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_RTWrDesc Lib "C11W32.DLL" Alias "_C11_RTWrDesc@12" (ByVal cwd As UInt16, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C11_SetAllILLEGAL Lib "C11W32.DLL" Alias "_C11_SetAllILLEGAL@4" (ByVal handleval As UInt32)
    Public Declare Sub C11_SetBCAST Lib "C11W32.DLL" Alias "_C11_SetBCAST@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetBUF Lib "C11W32.DLL" Alias "_C11_SetBUF@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetCHAN Lib "C11W32.DLL" Alias "_C11_SetCHAN@8" (ByVal chanval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetCIRCLE Lib "C11W32.DLL" Alias "_C11_SetCIRCLE@8" (ByVal circleval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetDYNBC Lib "C11W32.DLL" Alias "_C11_SetDYNBC@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetEXT Lib "C11W32.DLL" Alias "_C11_SetEXT@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetILLEGAL Lib "C11W32.DLL" Alias "_C11_SetILLEGAL@20" (ByVal subaddr As Int32, ByVal trbit As Int32, ByVal mcflag As Int32, ByVal bcastflag As Int32, ByVal handleval As UInt32)
    Public Declare Sub C11_SetINT Lib "C11W32.DLL" Alias "_C11_SetINT@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetIntLog Lib "C11W32.DLL" Alias "_C11_SetIntLog@8" (ByVal addressval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetINTMASK Lib "C11W32.DLL" Alias "_C11_SetINTMASK@8" (ByVal maskval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C11_SetLog Lib "C11W32.DLL" Alias "_C11_SetLog@8" (ByVal enableval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub C11_SetMODE Lib "C11W32.DLL" Alias "_C11_SetMODE@8" (ByVal modeval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetMonCtrl Lib "C11W32.DLL" Alias "_C11_SetMonCtrl@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetMonFilt Lib "C11W32.DLL" Alias "_C11_SetMonFilt@12" (ByVal valuel As UInt16, ByVal valueh As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetPP Lib "C11W32.DLL" Alias "_C11_SetPP@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetRTADDR Lib "C11W32.DLL" Alias "_C11_SetRTADDR@8" (ByVal rtaddr As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetStatus Lib "C11W32.DLL" Alias "_C11_SetStatus@12" (ByVal flags As UInt16, ByVal immclear As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetSTD Lib "C11W32.DLL" Alias "_C11_SetSTD@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetTIMEOUT Lib "C11W32.DLL" Alias "_C11_SetTIMEOUT@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_SetXMTSW Lib "C11W32.DLL" Alias "_C11_SetXMTSW@8" (ByVal enableval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C11_Shl Lib "C11W32.DLL" Alias "_C11_Shl@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function C11_Shr Lib "C11W32.DLL" Alias "_C11_Shr@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function C11_StatRead Lib "C11W32.DLL" Alias "_C11_StatRead@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C11_TTRead Lib "C11W32.DLL" Alias "_C11_TTRead@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C11_TTSet Lib "C11W32.DLL" Alias "_C11_TTSet@8" (ByVal timetagval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C11_TTZero Lib "C11W32.DLL" Alias "_C11_TTZero@4" (ByVal handleval As UInt32)
